<resources>
    <string name="app_name">CasaCovid</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="registrar">REGISTRAR</string>
    <string name="celular">Celular</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>

    <string name="titulo">LÍNEAS DE EMERGENCIA</string>
    <string name="num1">Línea 113</string>
    <string name="num2">Central Policial</string>
    <string name="num3">Bomberos</string>
    <string name="num4">Defensa civil</string>
    <string name="num5">Alerta Médica</string>
    <string name="num6">Clave Médica</string>
    <string name="num7">Ambulancias de ESSALUD</string>

    <string name="titulo1">MENU</string>

    <string name="titulo2">NOSOTROS</string>
    <string name="tema1">Alumnos de la FIIS de la Universidad Nacional del Callao</string>
    <string name="alumno">Alumnos:</string>
    <string name="alumno1">Alarcón Castillo José</string>
    <string name="alumno2">Chavez Palomino Alfredo</string>
    <string name="alumno3">Esteban Shuan Casey</string>
    <string name="alumno4">Flores Huanca María</string>
    <string name="alumno5">Huamanyari Katherine</string>

    <string name="titulo3">RECOMENDACIONES</string>
    <string name="tema2">Te mostramos una serie de recomendaciones para cuidar tu salud y de los demás </string>
    <string name="rec1">Recomendación 1</string>
    <string name="rec2">Recomendación 2</string>
    <string name="rec3">Recomendación 3</string>


</resources>